--- a/home/templates/includes/search.html
+++ b/home/templates/includes/search.html
@@ -2,5 +2,5 @@
 
 <form method="get" style="margin: 10px; width: auto; margin-top:0; margin-bottom: 30px;" class="search-line">
     <img src="{% static 'home/img/search-icon.png' %}" alt="">
-    <input type="text"id="user-search" name="search" placeholder="Search..." style="border: none; width: 100%; outline: none; background: transparent; font-size: 16px; margin-left: 8px; color: white;">
+    <input type="text"id="user-search-mess" name="search" placeholder="Search..." style="border: none; width: 100%; outline: none; background: transparent; font-size: 16px; margin-left: 8px; color: white;">
 </form>
