--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -13,8 +13,11 @@
 </head>
 <body>
     <div class="home-page">
+        <!-- Fixed Header -->
+        <div class="fixed-header-block">
+            
+            <div style="display: flex; flex: 1;"></div>
 
-        <div class="header">
             <div class="home-left-block">
                 <img src="{% static 'home/img/v24_18.png' %}" alt="" class="home-logo">
                 <nav>
@@ -67,48 +70,55 @@
                     </button>
                 </nav>
             </div>
+
+            {% block right-block %}
+                <div style="width: 620px; height: 0;"></div>
+            
+                <div class="home-right-block">
+                    <search style="margin-top: 20px;">
+                        {% include "includes/search.html" %}
+                    </search>
+                    <div class="home-r-pinned-block">
+                        <label>{ Pinned function }</label>
+                        <img src="{% static 'home/img/pin-icon.png' %}" alt="">
+                        <p>You can pin your <br>
+                            desired tab, chats, or <br> 
+                            notifications.</p>
+                    </div>
+                    <div class="home-r-recomendations">
+                        <h3>Popular Authors</h3>
+                        <div class="rec-card">
+                            <img src="{% static 'home/img/camera.png' %}" alt="">
+                            <h5>Popular Author_1 <br>
+                            <p>AI, Anime, Physical...</p></h5>
+                            <img src="{% static 'home/img/eye-icon.png' %}" alt="" class="eye-icon">
+                        </div>
+                        <div class="rec-card">
+                            <img src="{% static 'home/img/camera.png' %}" alt="">
+                            <h5>Popular Author_1 <br>
+                            <p>AI, Anime, Physical...</p></h5>
+                            <img src="{% static 'home/img/eye-icon.png' %}" alt="" class="eye-icon">
+                        </div>
+                        <div class="rec-card">
+                            <img src="{% static 'home/img/camera.png' %}" alt="">
+                            <h5>Popular Author_1 <br>
+                            <p>AI, Anime, Physical...</p></h5>
+                            <img src="{% static 'home/img/eye-icon.png' %}" alt="" class="eye-icon">
+                        </div>
+                    </div>
+                </div>
+            {% endblock %}
+            <div style="display: flex; flex: 1;"></div>
         </div>
+        <!-- ---- -->
+        <!-- Not fixed -->
+        <div style="display: flex; flex: 1; height: 100%;"></div>
 
         {% block center-block %}    {% endblock %} 
 
-        {% block right-block %}
-        <div class="block-of-home-right-block">
-            <div class="home-right-block">
-                <search style="margin-top: 20px;">
-                    {% include "includes/search.html" %}
-                </search>
-                <div class="home-r-pinned-block">
-                    <label>{ Pinned function }</label>
-                    <img src="{% static 'home/img/pin-icon.png' %}" alt="">
-                    <p>You can pin your <br>
-                        desired tab, chats, or <br> 
-                        notifications.</p>
-                </div>
-                <div class="home-r-recomendations">
-                    <h3>Popular Authors</h3>
-                    <div class="rec-card">
-                        <img src="{% static 'home/img/camera.png' %}" alt="">
-                        <h5>Popular Author_1 <br>
-                        <p>AI, Anime, Physical...</p></h5>
-                        <img src="{% static 'home/img/eye-icon.png' %}" alt="" class="eye-icon">
-                    </div>
-                    <div class="rec-card">
-                        <img src="{% static 'home/img/camera.png' %}" alt="">
-                        <h5>Popular Author_1 <br>
-                        <p>AI, Anime, Physical...</p></h5>
-                        <img src="{% static 'home/img/eye-icon.png' %}" alt="" class="eye-icon">
-                    </div>
-                    <div class="rec-card">
-                        <img src="{% static 'home/img/camera.png' %}" alt="">
-                        <h5>Popular Author_1 <br>
-                        <p>AI, Anime, Physical...</p></h5>
-                        <img src="{% static 'home/img/eye-icon.png' %}" alt="" class="eye-icon">
-                    </div>
-                </div>
-            </div>
-        </div>
-        {% endblock %} 
-
+        
+            <div style="display: flex; flex: 1; border: 6px solid #2C2C2C;"></div>
+        <!-- ---- --> 
 
     </div>
     {% block add_comment %}    {% endblock %}
