--- a/home/templates/includes/comment_form.html
+++ b/home/templates/includes/comment_form.html
@@ -177,7 +177,7 @@
                 </div>
             </div>
         </div>
-        <button type="submit" class="submit-button" disabled>Post</button> <br>
+        <button type="submit" class="submit-button">Post</button> <br>
     </form>
 </div>
 {% endblock %}
