--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -43,7 +43,7 @@
                 <div class="additional-bar">
 
                     <img src="{% static 'home/img/gallery-ico.png' %}" alt="" id="galleryBtn" class="gallery-btn" onclick="document.getElementById('mediaInput').click();">
-                    <input type="file" name="media_files" id="mediaInput" multiple accept="image/*,video/*" style="display: none;">
+                    <input type="file" name="media_files" id="mediaInput" multiple accept=".jpg,.jpeg,.png,.gif,.webp,.mp4,.mov,.webm,image/jpeg,image/png,image/gif,image/webp,video/mp4,video/quicktime,video/webm" style="display: none;">
 
                     <img src="{% static 'home/img/emoji-ico.png' %}" alt="">
                     <img src="{% static 'home/img/gif-ico.png' %}" alt="">
